<resources>
    <string name="challStatus">Status:</string>
    <string name="challStart">Start date:</string>
    <string name="challEnd">End date:</string>
    <string name="challWinner">Winner</string>
    <string name="challPrize">Offer:</string>
    <string name="challNoPending">You have no pending challenge requests</string>
    <string name="challRefused">Challenge refused</string>
    <string name="challAccepted">Challenge accepted</string>
    <string name="challNoPendingC">You have no pending challenges. Challenge a friend from the leaderboard and earn Bedollars!</string>
    <string name="challNoAccepted">You have no accepted challenges. Accept one or challenge a friend from the leaderboard</string>
    <string name="challNoEnded">You have no ended challenges</string>
    <string name="challChallenge">Challenge</string>
    <string name="challSent">Challenge sent to\u0020</string>
    <string name="challAccept">Do you want to accept this challenge from\u0020</string>
    <string name="challSend">Would you like to send a challenge? Bet 10 BeDollars, to win 25.</string>
    <string name="challTip">click on a user to interact</string>
    <string name="challmevsyou">I bet you can\'t reach this score in 48 hours</string>
    <string name="challmevsyoutitle">You can\'t reach...</string>
    <string name="challFriends">I bet I can reach this score in 48 hours</string>
    <string name="challFriendstitle">I can reach...</string>
    <string name="chall48">I bet I can get a better score than yours in the next 48 hours</string>
    <string name="chall48title">Who\'s the best?</string>
    <string name="chall48subtitle">I can reach a better score than yours</string>
    <string name="challmaxbet">Bedollars:</string>
    <string name="challhowmuchbet">I bet</string>
    <string name="challhowmanypoint">I can reach</string>
    <string name="challhowmanypointyou">%s cannot reach</string>
    <string name="challerrorbedollars">Please insert the amount of Bedollars you want to bet</string>
    <string name="challerrorpoints">Please insert the points you want to bet</string>
    <string name="challFromTo">From you to\u0020</string>
    <string name="challFrom">From\u0020</string>
    <string name="challYou">\u0020to you</string>
    <string name="challFromUser">\u0020challenges you</string>
    <string name="challBet">Bet</string>
    <string name="challCanWin">You can win</string>
    <string name="challPointsTarget">Points to do</string>
    <string name="challPoints">Points</string>
    <string name="clickhere">click here</string>
    <string name="leadTitle">Leaderboard</string>
    <string name="leadScore">Score:\u0020</string>
    <string name="leadSendChall">Send challenge</string>
    <string name="leadViewProfile">View profile</string>
    <string name="leadAddFriend">Add as friend</string>
    <string name="leadshowfriendsonly">Friends</string>
    <string name="leadshowclosestsonly">To beat</string>
    <string name="friendSel">Select a friend</string>
    <string name="friendsTitle">Your friends</string>
    <string name="friendsNo">You have no friends</string>
    <string name="friendSure">Are you sure you want to send this coupon as a gift to\u0020</string>
    <string name="friendSent">Gift sent to\u0020</string>
    <string name="friendLoading">Loading friends...</string>
    <string name="friendTitle">Friends</string>
    <string name="friendFind">Find Friends</string>
    <string name="friendFindT">Find people in the Beintoo community</string>
    <string name="friendYours">Your friends</string>
    <string name="friendYoursT">View your Beintoo friends</string>
    <string name="friendFriendshipReqT">Manage your friend requests</string>
    <string name="friendFindeditsearch">Search a nickname, name or mail</string>
    <string name="friendRecommendT">Recommend to a friend</string>
    <string name="friendRecommend">Recommend this app to your friends</string>
    <string name="friendSendReq">Send %s a friend request?</string>
    <string name="friendReqTitle">Friend requests</string>
    <string name="friendReqSubtitle">Click on name to accept</string>
    <string name="friendReqEmpty">You have no friend requests</string>
    <string name="friendReqAccept">Do you accept the friend request?</string>
    <string name="friendNotfound">Not found</string>
    <string name="friendReqSent">Friend request sent</string>
    <string name="friendReqAcc">Friend request accepted</string>
    <string name="friendReqIgn">Friend request refused</string>
    <string name="homeWelcome" xml:space="preserve">Welcome back\u0020</string>
    <string name="profileScore">Your scores</string>
    <string name="profileLevel">Level:\u0020</string>
    <string name="profileTotalScore">Tot:\u0020</string>
    <string name="profileBestScore">Best:\u0020</string>
    <string name="profileLastScore">Last:\u0020</string>
    <string name="profileNoScores">You have no scores for this app</string>
    <string name="profileDetach">Remove account from device</string>
	<string name="profileOf">%s Profile</string>
	<string name="password">Password</string>
	<string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="vgoodWhoAlso">Who also purchased</string>
    <string name="vgoodEnd">End date:</string>
    <string name="walletNoGoods">You have no offers yet</string>
    <string name="walletConverted">Redeemed offers</string>
    <string name="walletNotConverted">To be redeemed</string>
 	<string name="tryBe">Beintoo turns your Passion for apps into real offers.\nIt\'s free and extremely easy!</string>
    <string name="pressBt">Press the button below to try Beintoo</string>
    <string name="connectionError">Connection error.\nPlease check your Internet connection.</string>
    <string name="loadingBeintoo">Loading Beintoo...</string>
    <string name="loading">Loading...</string>
    <string name="login">Login...</string>
    <string name="wronglogin">Wrong username or password</string>
    <string name="earnedBalance">Your balance is: %d</string>
    <string name="earnedScore">You earned %d points.\u0020</string>
    <string name="earnedMultiScore">You earned multiple points:\u0020 %s</string>
    <string name="giveBedollarsEarned">You just earned %s Bedollars!\nUse them to redeem great offers on Beintoo</string>
    <string name="giveBedollarsEarned_s">You just earned %s Bedollar!\nUse your Bedollars to redeem great offers on Beintoo</string>
    <string name="boxWallet">Here are the offers you have collected!</string>
    <string name="boxChallenge">Here are your challenges\nIt\'s time to win</string>
    <string name="boxCoupon">Congratulations! You deserve an offer</string>
    <string name="boxCouponList">Congratulations! Choose your offer</string>
    <string name="boxUserSel">Which profile do you want to use?\nSelect one or use another account</string>
    <string name="boxUserLogin">Login to Beintoo</string>
    <string name="boxemail">Enter your email address</string>
    <string name="youremail">Your email</string>
    <string name="startBeintooFun">Start having fun!</string>
    <string name="tos">Beintoo will not distribute your email or spam you. Your email is sent via secure connection.
        By subscribing to Beintoo, you agree to Beintoo\'s <Data><![CDATA[<a href="http://www.beintoo.com/tos.html"><b>terms of service</b></a>]]></Data> and <Data><![CDATA[<a href="http://www.beintoo.com/tos.html"><b>privacy</b></a>]]></Data> policy.</string>
    <string name="confirmnick">Confirm your nickname</string>
    <string name="invalidemail">Please provide a valid email address</string>
    <string name="invalidnickname">The minimum length of the nickname is 3 characters</string>
    <string name="anotheraccount">Use another account</string>
    <string name="people">People</string>
    <string name="friends">Friends</string>
    <string name="pending">Pending</string>
    <string name="ongoing">Ongoing</string>
    <string name="ended">Ended</string>
    <string name="getcoupon">Get The Coupon</string>
    <string name="sendasgift">Send As a Gift</string>
    <string name="loginbt">Login</string>
    <string name="newuser">New user</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="profiledesc">view your global scoring</string>
    <string name="leaderboard">Leaderboards</string>
    <string name="leaderboarddesc">view your stats</string>
    <string name="wallet">My Offers</string>
    <string name="walletdesc">manage your offers</string>
    <string name="challenges">Challenges</string>
    <string name="challengesdesc">manage your challenges</string>
    <string name="forum">Tips&amp;Forum</string>
    <string name="forumdesc">join discussions and feedbacks</string>
    <string name="vgoodmessagealert">Hey! You earned a Beintoo offer by using this app!\nTap redeem and get it</string>
    <string name="vgoodmessagepositive">Redeem</string>
    <string name="vgoodrecommpositive">See More</string>
    <string name="vgoodmessagenegative">Later</string>
    <string name="vgoodmessagebanner">Hey! You got a Beintoo offer by using this app!\nTap here and redeem it</string>
    <string name="vgoodhtmlmessage">View your offer here</string>
    <string name="vgoodchoosedialog">Choose an option</string>
    <string name="vgoodgetcoupondialog">Get the coupon</string>
    <string name="vgoodsendgiftdialog">Send as a gift</string>
    <string name="vgooddetaildialog">More details</string>
    <string name="messages">Messages</string>
    <string name="messagesnewmsg">New message</string>
    <string name="messagefrom"><b>From:</b></string>
    <string name="messagedate"><b>Date:</b></string>
    <string name="messagereply">Reply</string>
    <string name="messagedelete">Delete</string>
    <string name="messagedeleting">Deleting...</string>
    <string name="messageaskdelete">Do you really want to delete this message?</string>
    <string name="messagesending">Sending...</string>
    <string name="messagesend">Send message</string>
    <string name="messageselect">Select a friend and write your message</string>
    <string name="messageto">To:</string>
    <string name="messagetext">Message:</string>
    <string name="messageempty">You have no received messages</string>
    <string name="messageloadmore">Load previous</string>
    <string name="messagesent">Messagge sent to\u0020</string>
    <string name="balance">Balance</string>
    <string name="balanceempty">You have no Bedollar transactions</string>
    <string name="BADGE_WIN">Badge Won</string>
	<string name="CHALLENGE_ACCEPT">Challenge Accepted</string>
	<string name="signupnow"><data><![CDATA[SIGN UP <b>NOW</b>]]></data></string>
	<string name="featured">Featured</string>
	<string name="national">National</string>
	<string name="aroundme">Around me</string>
	<string name="top">Top</string>
	<string name="categories">Categories</string>
	<string name="buy">Buy</string>
	<string name="yourbalance">Your credits:</string>
	<string name="youarebuying">You are buying:</string>
   	<string name="orderbyprice">Order by price</string>
   	<string name="or">or</string>
   	<string name="signup_message">Join the community to earn Bedollars and redeem high value offers</string>
   	<string name="signup">Signup</string>
   	<string name="orloginExisting">Already registered? Sign in here >></string>
   	<string name="gotodashboard">Start now!</string>
   	<string name="tutorial_play"><Data><![CDATA[<b>PLAY</b>]]> </Data> / Engage with your favourite apps in the Beintoo network</string>
   	<string name="tutorial_earn"><Data><![CDATA[<b>EARN</b>]]> </Data> / Collect Bedollars from your activity</string>
   	<string name="tutorial_redeem"><Data><![CDATA[<b>REDEEM</b>]]> </Data> / Get real world offers in the Beintoo store</string>
</resources>