<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/myScroll" android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
	android:scrollbars="vertical" android:fillViewport="true"
	android:layout_gravity="center_horizontal">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/maincontainer"
		android:orientation="vertical" android:background="#dadfe2">
		<include layout="@layout/beintoobar" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="1dip" android:background="#FFFFFF" android:id="@+id/whiteline"></LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
		    android:id="@+id/actionsContainer"
			android:layout_height="wrap_content" android:paddingTop="10dp"
			android:gravity="center" android:orientation="horizontal">
			<LinearLayout android:layout_width="fill_parent"
			    android:id="@+id/playContainer"
				android:layout_height="fill_parent" android:layout_weight="1"
				android:gravity="center" android:orientation="vertical">
				<ImageView android:id="@+id/imageView1"
					android:layout_width="128dp" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/play" />
				<TextView android:id="@+id/play" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:gravity="center" 
					android:text="@string/tutorial_play" android:textColor="#405679"/>
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
			    android:id="@+id/earnContainer"
				android:layout_height="fill_parent" android:layout_weight="1"
				android:gravity="center" android:orientation="vertical">
				<ImageView android:id="@+id/imageView1"
					android:layout_width="128dp" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/earn" />
				<TextView android:id="@+id/earn" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/tutorial_earn" 
					android:gravity="center" android:textColor="#405679" />
			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
			    android:id="@+id/redeemContainer"
				android:layout_height="fill_parent" android:layout_weight="1"
				android:gravity="center" android:orientation="vertical">
				<ImageView android:id="@+id/imageView1"
					android:layout_width="128dp" android:layout_height="wrap_content"
					android:adjustViewBounds="true" android:src="@drawable/redeem" />
				<TextView android:id="@+id/redeem" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/tutorial_redeem" 
					android:gravity="center" android:textColor="#405679" />
			</LinearLayout>
		</LinearLayout>
		<Button android:id="@+id/finishTutorial" android:gravity="center"
			android:layout_margin="10dp" android:layout_height="50dip"			
			android:layout_width="fill_parent" android:layout_gravity="center_horizontal"
			android:text="@string/gotodashboard" android:textColor="#FFFFFF"
			android:textSize="18dip"></Button>
	</LinearLayout>
</ScrollView>