<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/main" android:orientation="vertical"
	android:background="#dddddd">
	<include layout="@layout/beintoobarsmall" />
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="1dip" android:background="#FFFFFF" android:id="@+id/whiteline" />
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/tip" android:gravity="center_vertical"
		android:layout_height="27dip" android:paddingLeft="10dip">
		<TextView android:id="@+id/marketplace_balancetitle"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/yourbalance" android:textColor="@color/light_gray_text"
			android:layout_weight="1" />
		<TextView android:id="@+id/marketplace_balancecredit"
			android:layout_marginRight="10dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textColor="@color/light_gray_text"
			android:textStyle="bold" />
	</LinearLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="0.75dip" android:background="#8F9193"
		android:id="@+id/grayline" />
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="0.75dip" android:background="#FFFFFF"
		android:id="@+id/whiteline" />
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/marketplace_category_buttons" android:layout_width="fill_parent"
		android:gravity="center">
		<Button android:id="@+id/marketplace_featured_button"
			android:textColor="@color/gray_text" android:layout_height="35dip"
			android:text="@string/featured" android:padding="0dip"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:background="@drawable/tab_buttons"></Button>
		<RelativeLayout android:layout_width="0.75dip"
			android:layout_height="fill_parent" android:background="#8F9193"
			android:id="@+id/grayline" />
		<Button android:id="@+id/marketplace_national_button"
			android:textColor="@color/gray_text" android:layout_height="35dip"
			android:text="@string/national" android:padding="0dip"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:background="@drawable/tab_buttons_selected" />
		<RelativeLayout android:layout_width="0.75dip"
			android:layout_height="fill_parent" android:background="#8F9193"
			android:id="@+id/grayline" />
		<Button android:id="@+id/marketplace_aroundme_button"
			android:textColor="@color/gray_text" android:layout_height="35dip"
			android:text="@string/aroundme" android:padding="0dip"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:background="@drawable/tab_buttons" />
	</LinearLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="0.75dip" android:background="#8F9193"
		android:id="@+id/grayline" />
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="0.75dip" android:background="#FFFFFF"
		android:id="@+id/whiteline" />
	<LinearLayout android:layout_height="wrap_content"
		android:id="@+id/marketplace_subcategory_buttons"
		android:layout_width="fill_parent" android:gravity="center">
		<Button android:id="@+id/marketplace_top_button"
			android:textColor="@color/gray_text" android:layout_height="35dip"
			android:text="@string/top" android:padding="0dip"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:background="@drawable/tab_buttons_selected"></Button>
		<RelativeLayout android:layout_width="0.75dip"
			android:layout_height="fill_parent" android:background="#8F9193"
			android:id="@+id/grayline" />
		<Button android:id="@+id/marketplace_category_button"
			android:textColor="@color/gray_text" android:layout_height="35dip"
			android:text="@string/categories" android:padding="0dip"
			android:layout_width="fill_parent" android:layout_weight="1"
			android:background="@drawable/tab_buttons" />
	</LinearLayout>
	<!-- MARKETPLACE CONTENT -->
	<RelativeLayout android:id="@+id/marketplace_order_filter" android:visibility="gone"
		android:layout_width="fill_parent" android:layout_height="40dip"
		android:gravity="right|center_vertical" android:paddingRight="10dip">
		<TextView android:id="@+id/orderprice_lbl" android:textColor="@color/gray_text"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/orderbyprice" android:layout_marginTop="5dip"
			android:layout_marginRight="5dip" />
		<RelativeLayout android:id="@+id/marketplace_order_asc"
			android:layout_width="30dip" android:layout_height="30dip"
			android:gravity="center" android:layout_toRightOf="@id/orderprice_lbl"
			android:background="@drawable/blu_gradient_button"
			android:layout_marginRight="5dip">
			<ImageView android:id="@+id/imageView1"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:src="@drawable/up" />
		</RelativeLayout>
		<RelativeLayout android:id="@+id/marketplace_order_desc"
			android:layout_width="30dip" android:layout_height="30dip"
			android:gravity="center" android:layout_toRightOf="@id/marketplace_order_asc"
			android:background="@drawable/blu_gradient_button">
			<ImageView android:id="@+id/imageView2"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:src="@drawable/down" />
		</RelativeLayout>
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:orientation="vertical" android:id="@+id/goodcontent"
		android:layout_height="wrap_content" android:gravity="center">
		<ListView android:layout_height="wrap_content" android:id="@+id/listView"
			android:layout_width="fill_parent" android:scrollbars="vertical"
			android:divider="#959696" android:dividerHeight="0.5dip"
			android:fadingEdge="none" android:drawSelectorOnTop="false"
			android:layout_weight="1"></ListView>
	</RelativeLayout>
	<!-- END MARKETPLACE CONTENT -->

	<LinearLayout android:layout_width="fill_parent"
		android:orientation="vertical" android:layout_height="fill_parent"
		android:gravity="bottom|center" android:id="@+id/fond">
		<ImageView android:id="@+id/layoutbottom"
			android:layout_width="fill_parent" android:background="@drawable/footer"
			android:layout_height="11dip" />
	</LinearLayout>
</LinearLayout>