<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/myScroll" android:layout_width="fill_parent"
	android:scrollbars="vertical" android:layout_height="fill_parent"
	android:fillViewport="true">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/maincontainer"
		android:orientation="vertical" android:background="#dddddd">
		<include layout="@layout/beintoobarsmall" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="1dip" android:background="#FFFFFF" android:id="@+id/whiteline"></LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/tip" android:gravity="center_vertical"
			android:layout_height="27dip" android:paddingLeft="10dip">
			<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/messageselect"
				android:textColor="#787A77"></TextView>
		</LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="1dip" android:background="#8F9193" android:id="@+id/grayline"></LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="1dip" android:background="#FFFFFF" android:id="@+id/whiteline"></LinearLayout>
		<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1"
			android:orientation="vertical" android:layout_marginLeft="10dip"
			android:layout_marginRight="10dip" android:layout_marginTop="10dip" android:layout_height="wrap_content">
			<TextView android:id="@+id/textView2" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/messageto"
				android:textColor="#545859"></TextView>
			<EditText android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:lines="1"
				android:focusable="false" android:focusableInTouchMode="false"
				android:id="@+id/editto"></EditText>
			<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/messagetext"
				android:textColor="#545859"></TextView>
			<LinearLayout android:focusable="true"
                android:focusableInTouchMode="true" android:layout_width="0px"
                android:layout_height="0px" />	
			<EditText android:layout_width="fill_parent"
				android:gravity="top" android:id="@+id/edittext"
				android:imeOptions="actionDone" android:focusable="true" android:focusableInTouchMode="true" android:layout_margin="1dip" android:layout_height="130dip"></EditText>
		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_height="fill_parent"
			android:gravity="bottom|center" android:id="@+id/fond">
			<Button android:id="@+id/sendmessage" android:textColor="#FFFFFF"
				android:layout_width="294dip" android:text="@string/messagesend"
				android:padding="0dip" android:textSize="16dip"
				android:layout_marginBottom="10dip" android:layout_height="50dip">
			</Button>
			<ImageView android:id="@+id/layoutbottom"
				android:layout_width="fill_parent" android:background="@drawable/footer"
				android:layout_height="11dip" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>		