<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/myScroll" android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:scrollbars="vertical" android:fillViewport="true" android:layout_gravity="center_horizontal">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:id="@+id/maincontainer"
		android:orientation="vertical" android:background="#dadfe2">
		<include layout="@layout/beintoobar" />
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="1dip" android:background="#FFFFFF" android:id="@+id/whiteline"></LinearLayout>
		<ViewSwitcher android:layout_width="fill_parent"
			android:id="@+id/viewFlipper" android:layout_height="wrap_content"
			android:foregroundGravity="center">
			
			<LinearLayout android:id="@+id/orientationContainer"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="horizontal" android:layout_gravity="center_horizontal"
				android:gravity="center_horizontal">
				<ImageView android:id="@+id/infoImage"
					android:layout_width="192dp" android:layout_height="254dp"
					android:src="@drawable/signup_landscape" />
				<LinearLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="center_horizontal" android:orientation="vertical">
				<TextView android:id="@+id/textView5" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/signup_message"
					android:textColor="#4B669B" android:textStyle="bold"
					android:gravity="center" android:padding="5dp" />
				<LinearLayout android:id="@+id/fbandlogin"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:gravity="center_horizontal" android:orientation="vertical">
					<Button android:id="@+id/fblogin" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
						android:background="@drawable/facebook" />
				</LinearLayout>
				<TextView android:id="@+id/textView4" android:layout_width="wrap_content"
					android:layout_marginTop="3dip" android:layout_height="wrap_content"
					android:layout_marginBottom="3dip" android:text="@string/or"
					android:textColor="#4B669B" android:textStyle="bold" />
				<EditText android:layout_height="wrap_content" android:id="@+id/emailtext"
					android:layout_gravity="center_horizontal"
					android:layout_marginBottom="5dip" android:layout_width="294dip"
					android:hint="@string/boxemail" android:singleLine="true"
					android:imeOptions="actionDone" android:maxLength="255"></EditText>
				<Button android:id="@+id/newuser" android:gravity="center"
					android:layout_height="50dip" android:layout_width="294dip"
					android:layout_gravity="center_horizontal" android:text="@string/signup"
					android:textColor="#FFFFFF" android:textSize="18dip"></Button>
				<TextView android:id="@+id/loginexisting"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginTop="10dip" android:layout_marginBottom="5dp" 
					android:textColor="#4B669B" android:textSize="16dip"
					android:textStyle="bold" android:text="@string/orloginExisting" />
				
			</LinearLayout>
			</LinearLayout>
			<LinearLayout android:id="@+id/linearLayout2"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:orientation="vertical" android:layout_gravity="center_horizontal"
				android:gravity="center_horizontal">
				<TextView android:id="@+id/textView1" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:gravity="center"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="20dip" android:layout_marginBottom="10dip"
					android:textColor="#333133" android:lines="1" android:maxLines="1"
					android:imeOptions="actionDone" android:text="Confirm your nickname"></TextView>
				<EditText android:layout_height="wrap_content" android:id="@+id/nicktext"
					android:layout_gravity="center_horizontal"
					android:layout_marginBottom="15dip" android:hint="nickname"
					android:layout_width="294dip" android:singleLine="true"
					android:imeOptions="actionDone" android:maxLength="20"></EditText>
				<Button android:id="@+id/confirmNick" android:gravity="center"
					android:textColor="#FFFFFF" android:layout_height="50dip"
					android:layout_width="294dip" android:textSize="18dip"
					android:layout_gravity="center_horizontal" android:text="@string/confirmnick"></Button>
			</LinearLayout>
			
		</ViewSwitcher>
		
		<LinearLayout android:layout_width="fill_parent"
			android:orientation="vertical" android:layout_height="fill_parent"
			android:gravity="bottom|center" android:id="@+id/fond">
			<View android:layout_width="fill_parent" android:layout_height="0.5dp" 
				    android:background="#aaa" android:layout_margin="10dp" />
				<TextView android:id="@+id/tos" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:paddingLeft="10dp"
					android:paddingRight="10dp" android:paddingBottom="10dp"
					android:gravity="center"
					android:textColor="#333133" android:textSize="12dip" />
			<TextView android:id="@+id/textView3" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="www.beintoo.com"
				android:layout_marginBottom="10dip"></TextView>
			<ImageView android:id="@+id/layoutbottom"
				android:layout_width="fill_parent" android:background="@drawable/footer"
				android:layout_height="11dip" />

		</LinearLayout>
	</LinearLayout>
</ScrollView>	
